tests/format/junctions/invalid/missing.bst
kind: stack
runtime-depends:
- junction: missingfile.bst
  filename: target.bst
